Extra question ans complete

--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
             <h1>Reported posts</h1>
         </div>
     </main>
+    <section class="container m-5">
+        <h4>No: 1. How does JavaScript work?</h4>
+        <p>
+        <h2>Ans:</h2>JavaScript is a Single threaded Asyncronous Programming language. Everything in javascript happeps
+        inside an execution context. The execution context has to component. The First component is memory component,
+        where store data key and value pair. The memory component also known as Environment Variable. The second
+        component is code component, where code is executed line by line, from top to bottom, As the things happeps in
+        crome V8 Engine. </p>
+        <h4>No: 2. What is the deferent between Local Storage and Session Storage???</h4>
+        <h2>Ans:</h2>
+        Local Storage: is storage where we can store data from browser, if we clone the data the data didn't delete from
+        browser is saved in broser,
+        Session Storage is is store where if we clone the browser the data will be deleted, the session storage data
+        store how much time we browse the internet it's store that much time.
+        session storage and Local storage data would not be access by the server. The server can't access the data
+        The session and Local storage data always store in browser like key and value
+        Session storage data usage less that Local Storage.
+        </p>
+    </section>
     <footer></footer>
 
     <!-- add javascript  file  -->
